1. Moving Solution class to separate file 2. Making mMovesHistory an object of Solution rather than stack